--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>This is Home page</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem quas maxime, recusandae repellat dignissimos incidunt distinctio quaerat, ad labore blanditiis velit sit est rem nisi non similique vero libero eligendi?</p>
 </body>
 </html>
